# tewi

./: .clang  .clang-format  .clang-tidy  .clang_complete  .clang_format_test  .exrc  .fuse_hidden0000276800000028  .gitignore  .gitmodules  CMakeLists.txt  README.md  Session.vim  build.sh  build_doc.sh  compile_commands.json  conanfile.py  conanfile.txt  meson.build  session.vim
cmake/: avr-toolchain.cmake  include-tools.cmake  install-target.cmake  link-deps.cmake  mingw-toolchain.cmake  resolve-dependencies.cmake  set-flags.cmake
cmake/toolchains/: cross-win64.cmake  win64-clang.cmake  win64-mingw.cmake  win64-msvc.cmake
doc/: CMakeLists.txt  Doxyfile.in  Main.tex.in  index.html  intro.tex  setup.tex  standardese.ini
doc/apidoc/: apidoc.tex  concepts.tex  index.html  video.tex
doc/apidoc/concepts/: inputmanager.tex
doc/apidoc/graphics/: index.html  window.html
doc/apidoc/video/: api.tex  context.tex  rendering.tex  shader.tex  texture.tex  window.tex
doc/concepts/: InputManager.h
doc/css/: main_style.css
doc/examples/: api_intro.cpp  quickstart.cpp  renderer2D_usage.cpp  shader_creation.cpp  window_usage.cpp
doc/markdown/: apitags.md  index.md
examples/: CMakeLists.txt  imgui.cpp  sprite_rendering.cpp  window_events.cpp
include/: Common.h  GameCommon.hpp  Log.h
include/EventSystem/: Event.h  EventType.h
include/IO/: BasicIO.h  InputManager.h
include/Physics/: Collidable2D.h
include/Platform/NullRenderer/: BatchRenderer2D.hpp  Context.hpp  Device.hpp  GameCommon.hpp  Shader.hpp  Swapchain.hpp  Window.hpp
include/Platform/OpenGL/: BatchRenderer2D.hpp  Context.hpp  Device.hpp  GLContext.h  IndexBuffer.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp  TextureCache.hpp
include/Platform/Vulkan/: Callbacks.h  Common.h  Context.hpp  Device.hpp  Devices.h  Instance.h  Instance.hpp  LogicalDevice.h  PhysicalDevices.h  QueueFamily.h  Shader.hpp  SwapChainDetails.h  Swapchain.hpp  ValidationLayers.h  VkContext.h
include/Utils/: Clock.h  DebugOnly.h  Functional.h  GLFWCallbacks.h  String.hpp  StringLiteral.hpp  TickTimer.h  Types.h  WriteOnce.h
include/Video/: BatchRenderer2D.h  BatchRenderer2D.hpp  Camera2D.h  EuclideanShapes.h  IndexBuffer.hpp  Renderable2D.hpp  Renderer2D.hpp  ResourceManager.hpp  Shader.h  Shader.hpp  Sprite.h  Texture.h  TextureCache.h  TextureCache.hxx  Uniform.h  Vertex.h  Window.h  Window.hpp
include/Video/API/: API.h  BatchRenderer2D.hpp  Context.h  Context.hpp  Device.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp
include/tewi/: Common.h  GameCommon.hpp
include/tewi/EventSystem/: Event.h  EventType.h
include/tewi/IO/: BasicIO.h  InputManager.h
include/tewi/Input/: InputBuffer.hpp
include/tewi/Physics/: Collidable2D.h
include/tewi/Platform/NullRenderer/: BatchRenderer2D.hpp  Context.hpp  Device.hpp  GameCommon.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp  Window.hpp
include/tewi/Platform/OpenGL/: BatchRenderer2D.hpp  Context.hpp  Device.hpp  Glew.h  IndexBuffer.h  IndexBuffer.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp  TextureCache.hpp
include/tewi/Platform/Vulkan/: Callbacks.h  Common.h  Context.hpp  Device.hpp  Instance.hpp  QueueFamily.h  Shader.hpp  Swapchain.hpp  SwapchainDetails.h  ValidationLayers.h
include/tewi/Utils/: Clock.h  GLFWCallbacks.h  Glfw.h  ImGuiBindings.h  Log.h  TickTimer.h  Types.h
include/tewi/Video/: BatchRenderer2D.hpp  Camera2D.h  IndexBuffer.hpp  Renderable2D.hpp  Renderer2D.hpp  ResourceManager.hpp  Shader.hpp  Sprite.h  Texture.h  TextureCache.h  TextureCache.hxx  Uniform.h  Vertex.h  Window.hpp  WindowEvent.hpp
include/tewi/Video/API/: API.h  Context.hpp  Device.hpp  Instance.hpp  Swapchain.hpp
lib/universal/: CMakeLists.txt
lib/universal/lodepng/: picopng.h
src/IO/: InputManager.cpp
src/Input/: InputBuffer.cpp
src/Physics/: Collidable2D.cpp
src/Platform/NullRenderer/: BatchRenderer2D.cpp  Context.cpp  Device.cpp  Shader.cpp  Swapchain.cpp  Window.cpp
src/Platform/OpenGL/: BatchRenderer2D.cpp  Context.cpp  Device.cpp  GLContext.cpp  ImGuiBindings.cpp  IndexBuffer.cpp  Instance.cpp  Shader.cpp  Swapchain.cpp  TextureCache.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Utils/: Clock.cpp  TickTimer.cpp
src/Video/: BatchRenderer2D.cpp  Camera2D.cpp  Shader.cpp  Sprite.cpp  TextureCache.cpp  Window.cpp
tests/: CMakeLists.txt
tests/src/: window.cpp
